[gd_scene load_steps=2 format=3 uid="uid://clfwvscofnwyr"]

[ext_resource type="Script" path="res://ButtonRecherche.gd" id="1_w4hq0"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4hq0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PrixLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
